# swagger/v1/swagger.yaml
@@ -100,6 +100,102 @@ paths:
           description: discipline deleted
         '404':
           description: discipline not found
+  "/topics":
+    get:
+      summary: Retrieves topic list
+      tags:
+      - Topics
+      responses:
+        '200':
+          description: topic found
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/Topic"
+    post:
+      summary: Creates a topic
+      tags:
+      - Topics
+      parameters: []
+      responses:
+        '201':
+          description: topic created
+        '422':
+          description: invalid request
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/TopicError"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/Topic"
+  "/topics/{id}":
+    get:
+      summary: Retrieves a topic
+      tags:
+      - Topics
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: topic found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/Topic"
+        '404':
+          description: topic not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/RecordNotFoundError"
+    patch:
+      summary: Updates a topic
+      tags:
+      - Topics
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: topic updated
+        '422':
+          description: invalid request
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/TopicError"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/Topic"
+    delete:
+      summary: Deletes a topic
+      tags:
+      - Topics
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '204':
+          description: topic deleted
+        '404':
+          description: topic not found
 servers:
 - url: https://{defaultHost}
   variables:
@@ -141,6 +237,43 @@ components:
       type: object
       properties:
         name:
+          type: array
+          items:
+            type: string
+    Topic:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        discipline_id:
+          type: string
+          format: uuid
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+        url:
+          type: string
+          format: url
+      required:
+      - id
+      - name
+      - created_at
+      - updated_at
+      - url
+    TopicError:
+      type: object
+      properties:
+        name:
+          type: array
+          items:
+            type: string
+        discipline:
           type: array
           items:
             type: string
